# hackathon-stuff

./: README.md
events/aws_pangea_ai/: hello.txt
events/aws_pangea_ai/jche/secure-rag/: package-lock.json  package.json
events/aws_pangea_ai/provided_examples/vector-embedding-playground/: README.md  dissimilar-sentence.py  king-queen.py  similar-sentence.py  vector-embedding.py
events/aws_students/webapp/: index.html  main.js  package.json  style.css  vite.config.js
events/cloudflare_pangaea/: README.md
events/cloudflare_pangaea/url_check/: package.json  pnpm-lock.yaml
events/cloudflare_pangaea/url_check/src/components/: UrlCheck.astro
events/cloudflare_pangaea/url_check/src/layouts/: Layout.astro
events/cloudflare_pangaea/url_check/src/pages/: index.astro
events/cloudflare_pangaea/url_check/src/pages/api/: scan.astro
events/weaviate_rag_hack_night/bot/: README.md  main.py  ui.json
events/weaviate_rag_hack_night/writer-framework-food/hello/: main.py  ui.json
practice/d1-tutorial/: package.json  pnpm-lock.yaml  wrangler.toml
practice/d1-tutorial/src/: index.js
practice/hello-cf-rs/: Cargo.toml  wrangler.toml
practice/hello-cf-rs/src/: lib.rs
