[package]
name = "hello-cf-rs"
version = "0.1.0"
edition = "2021"
authors = [ "John Chen <john.hk.chen@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.1", features=['http'] }
worker-macros = { version="0.4.1", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
serde = "1.0.210"
